[package]
name = "algo01"
version = "0.1.0"
authors = ["Nicolas Brüggemann <nbrueggemann@itcoops.de>"]

[dependencies]
piston = "0.24.0"
piston-texture = "0.4.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.28.0"
piston2d-opengl_graphics = "0.31.0"

#version = "0.10.0"
image = "0.10.1"
rand = "0.3"


[[bin]]
name = "main"
path = "src/main.rs"
